--- a/index.html
+++ b/index.html
@@ -2,140 +2,171 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8">
-<title>AI Undangan Pernikahan</title>
+<title>Undangan Digital | EtaWeb</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
+*{box-sizing:border-box;font-family:'Segoe UI',sans-serif}
 body{
-  margin:0;font-family:Arial,Helvetica,sans-serif;
+  margin:0;
+  min-height:100vh;
   background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);
-  color:#fff;padding:20px
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  color:#fff;
+  overflow:hidden;
 }
-.container{
-  max-width:480px;margin:auto;
-  background:#0d0d0d;border-radius:16px;
-  padding:20px;box-shadow:0 15px 40px rgba(0,0,0,.6)
+
+/* CONTAINER */
+.wrapper{
+  text-align:center;
+  animation:fadeIn 1s ease;
 }
-h1{text-align:center;color:#ff4d4d}
-label{display:block;margin-top:12px;color:#ccc;font-size:13px}
-input,textarea,select{
-  width:100%;padding:12px;margin-top:6px;
-  border-radius:10px;border:none;font-size:14px
+
+/* LOGO */
+.logo img{
+  width:90px;
+  margin-bottom:15px;
 }
-textarea{resize:none}
-button{
-  width:100%;padding:14px;margin-top:16px;
-  border-radius:12px;border:none;
-  background:linear-gradient(135deg,#ff4d4d,#ff0000);
-  color:#fff;font-size:16px;cursor:pointer
+
+/* NAMA TAMU */
+.to{
+  font-size:14px;
+  color:#ccc;
+  margin-bottom:10px;
 }
-pre{
-  background:#000;padding:12px;border-radius:10px;
-  margin-top:12px;font-size:13px;white-space:pre-wrap
+
+/* AMPLOP */
+.envelope{
+  width:120px;
+  height:120px;
+  background:#c1121f;
+  border-radius:20px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:50px;
+  cursor:pointer;
+  animation:pulse 2s infinite;
 }
-small{color:#aaa}
+.envelope:active{transform:scale(.95)}
+
+/* MUSIK */
+.music{
+  margin-top:15px;
+}
+select{
+  padding:10px;
+  border-radius:10px;
+  border:none;
+  width:100%;
+}
+
+/* BUTTON */
+.btn{
+  margin-top:15px;
+  background:linear-gradient(135deg,#25D366,#128C7E);
+  border:none;
+  padding:12px;
+  border-radius:12px;
+  width:100%;
+  color:#fff;
+  font-size:15px;
+  cursor:pointer;
+}
+
+/* FOOTER */
+.footer{
+  margin-top:25px;
+  font-size:12px;
+  opacity:.6;
+}
+
+/* ANIMATION */
+@keyframes fadeIn{
+  from{opacity:0;transform:translateY(20px)}
+  to{opacity:1;transform:translateY(0)}
+}
+@keyframes pulse{
+  0%{box-shadow:0 0 0 0 rgba(193,18,31,.6)}
+  70%{box-shadow:0 0 0 20px rgba(193,18,31,0)}
+  100%{box-shadow:0 0 0 0 rgba(193,18,31,0)}
+}
 </style>
 </head>
 
 <body>
-<div class="container">
-<h1>AI Undangan Pernikahan</h1>
 
-<label>Nama Pengantin Pria</label>
-<input id="pria">
+<div class="wrapper" id="wrapper">
 
-<label>Nama Pengantin Wanita</label>
-<input id="wanita">
+  <!-- LOGO -->
+  <div class="logo">
+    <img src="logo.png" alt="EtaWeb">
+  </div>
 
-<label>Tanggal Acara (YYYY-MM-DD)</label>
-<input id="tanggal">
+  <!-- NAMA TAMU -->
+  <div class="to" id="toName">Kepada Yth.</div>
 
-<label>Alamat Lengkap Acara</label>
-<textarea id="alamat"></textarea>
+  <!-- AMPLOP -->
+  <div class="envelope" onclick="openInvite()">✉️</div>
+  <p>Klik amplop untuk membuka undangan</p>
 
-<label>Link Google Maps</label>
-<input id="maps">
+  <!-- MUSIK -->
+  <div class="music">
+    <select id="musik">
+      <option value="musik/wedding1.mp3">
+        You're Still The One – Shania Twain
+      </option>
+      <option value="musik/wedding2.mp3">
+        MALIQ & D'Essentials – Pilihanku
+      </option>
+      <option value="musik/wedding3.mp3">
+        Shane Filan – Beautiful In White
+      </option>
+    </select>
+  </div>
 
-<label>Pilih Lagu Undangan</label>
-<select id="lagu">
-  <option value="musik/wedding1.mp3">🎵 You're Still The One – Shania Twain</option>
-  <option value="musik/wedding2.mp3">🎵 Pilihanku – MALIQ & D'Essentials</option>
-  <option value="musik/wedding3.mp3">🎵 Beautiful In White – Shane Filan</option>
-</select>
+  <!-- SHARE WA -->
+  <button class="btn" onclick="shareWA()">📤 Share WhatsApp</button>
 
-<label>Foto Mempelai (opsional)</label>
-<input type="file" id="foto" accept="image/*">
-<small>Disarankan foto persegi (1:1)</small>
+  <!-- WATERMARK -->
+  <div class="footer">
+    © EtaWeb • Digital Wedding Invitation
+  </div>
 
-<button onclick="buat()">✨ Buat Web Undangan</button>
-
-<pre id="status">Siap membuat undangan…</pre>
 </div>
 
+<audio id="bgMusic" loop></audio>
+
 <script>
-const API_URL = "https://dry-mud-3b8ai-undangan-api.etaweb90.workers.dev";
-
-function buat(){
-  const p=pria.value.trim(),
-        w=wanita.value.trim(),
-        t=tanggal.value.trim(),
-        a=alamat.value.trim(),
-        m=maps.value.trim(),
-        g=lagu.value,
-        f=foto.files[0];
-
-  if(!p||!w||!t||!a||!m){
-    alert("Lengkapi semua data kecuali foto");
-    return;
-  }
-
-  const prompt = `
-Buatkan teks undangan pernikahan yang sopan, rapi, dan elegan.
-
-Nama Pengantin Pria: ${p}
-Nama Pengantin Wanita: ${w}
-Tanggal Acara: ${t}
-Lokasi Acara: ${a}
-
-Gunakan Bahasa Indonesia yang baik.
-Tanpa huruf kapital semua.
-Format rapi dengan spasi baris.
-`;
-
-  status.innerText="⏳ Memproses AI…";
-
-  fetch(API_URL,{
-    method:"POST",
-    headers:{ "Content-Type":"application/json" },
-    body:JSON.stringify({ prompt })
-  })
-  .then(r=>r.json())
-  .then(d=>{
-    localStorage.setItem("ai_text",d.result||"");
-    if(f){
-      const reader=new FileReader();
-      reader.onload=e=>{
-        localStorage.setItem("foto",e.target.result);
-        lanjut(p,w,t,a,m,g);
-      };
-      reader.readAsDataURL(f);
-    }else{
-      localStorage.removeItem("foto");
-      lanjut(p,w,t,a,m,g);
-    }
-  })
-  .catch(()=>status.innerText="❌ Gagal terhubung ke AI");
+// AMBIL NAMA TAMU DARI URL
+const params = new URLSearchParams(window.location.search);
+const to = params.get('to');
+if(to){
+  document.getElementById('toName').innerText = "Kepada Yth. " + decodeURIComponent(to);
 }
 
-function lanjut(p,w,t,a,m,g){
-  location.href=
-    "undangan.html"+
-    "?p="+encodeURIComponent(p)+
-    "&w="+encodeURIComponent(w)+
-    "&t="+encodeURIComponent(t)+
-    "&a="+encodeURIComponent(a)+
-    "&m="+encodeURIComponent(m)+
-    "&g="+encodeURIComponent(g);
+// SHARE WA
+function shareWA(){
+  const link = window.location.href;
+  const text = `Assalamu’alaikum,\nSaya mengundang Anda untuk menghadiri acara pernikahan kami.\n\nBuka undangan:\n${link}`;
+  window.open(`https://wa.me/?text=${encodeURIComponent(text)}`,'_blank');
+}
+
+// BUKA UNDANGAN
+function openInvite(){
+  const music = document.getElementById('musik').value;
+  const audio = document.getElementById('bgMusic');
+  audio.src = music;
+  audio.play();
+
+  document.getElementById('wrapper').style.opacity="0";
+  setTimeout(()=>{
+    window.location.href = "undangan.html?music="+encodeURIComponent(music);
+  },400);
 }
 </script>
+
 </body>
 </html>
